# python-project-lvl1

./: .gitignore  .travis.yml  Makefile  README.md  pyproject.toml
brain_games/: brain_even_game.py  cli.py  engine.py  game_flow.py
brain_games/games/: __init__.py  brain_calc_game.py  brain_even_game.py  brain_prime_game.py  brain_progression_game.py  calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
