[tool.poetry]
name = "ashpb_brain_games"
version = "0.5.2"
description = "Hexlet Python study project 1 (Brain Games)"
authors = ["Pavel Borisov <ashpb@me.com>"]
packages = [
  { include = "brain_games" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "License :: Freeware"
]
repository = "https://github.com/ashpb/python-project-lvl1"

[tool.poetry.dependencies]
python = "^3.7"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
